use Julia dots as logo

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,7 +65,7 @@
   <header class="masthead">
     <div class="wrapper">
       <a href="/" class="masthead-logo">
-        <%= image_tag "logo_small.png" %> <span class='header-text'><%= setting(:name) %></span>
+        <%= image_tag "julia-dots.svg" %> <span class='header-text'><%= setting(:name) %></span>
       </a>
 
       <nav class="masthead-nav">
