--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -60,7 +60,7 @@
   <header class="masthead">
     <div class="wrapper">
       <a href="/" class="masthead-logo">
-        <%= image_tag "logo_small.png" %> <span><%= setting(:name) %></span>
+        <%= image_tag "julia-dots.svg" %> <span><%= setting(:name) %></span>
       </a>
 
       <nav class="masthead-nav">
