--- a/app/views/papers/new.html.erb
+++ b/app/views/papers/new.html.erb
@@ -7,9 +7,9 @@
         <strong>⚠️ ⚠️ ⚠️ Before you submit ⚠️ ⚠️ ⚠️ </strong>
         <p>As the submitting author, before you submit, please make sure that you have reviewed the following items. We promise this will make things go much more quickly during the review process <span class="octicon octicon-rocket"></span>:
           <ul>
-            <li>You have reviewed the <a href="https://joss.readthedocs.io/en/latest/submitting.html">submission instructions</a> and verified that your submission meets our <a href="https://joss.readthedocs.io/en/latest/submitting.html#submission-requirements">submission requirements</a>.</li>
-            <li>There is a Markdown file named <code>paper.md</code> present in your repository that is structured <a href="https://joss.readthedocs.io/en/latest/submitting.html#example-paper-and-bibliography">like this</a>.</li>
-            <li>You have included the <a href="https://joss.readthedocs.io/en/latest/submitting.html#what-should-my-paper-contain">required sections</a> in your paper.</li>
+            <li>You have reviewed the <a href="https://proceedings.juliacon.org/guide/authors">submission instructions</a> and verified that your submission meets our <a href="https://proceedings.juliacon.org/guide/authors#submission-requirements">submission requirements</a>.</li>
+            <li>There is a Latex file named <code>paper.tex</code> present in your repository that is structured <a href="https://proceedings.juliacon.org/guide/authors#example-paper-and-bibliography">like this</a>.</li>
+            <li>You have included the <a href="https://proceedings.juliacon.org/guide/authors#what-should-my-paper-contain">required sections</a> in your paper.</li>
           </ul></p>
       </div>
 
@@ -45,7 +45,7 @@
 
         <label class="one-half column">
           <input type="checkbox" id="author-check" class="pre-check">
-          I certify that I am submitting software for which I am a primary author
+          I certify that I am submitting paper/software for which I am a primary author
         </label>
         <label class="one-half column">
           <input type="checkbox" id="coc-check" class="pre-check">
