--- a/app/views/shared/review_body.erb
+++ b/app/views/shared/review_body.erb
@@ -24,9 +24,9 @@ Please avoid lengthy details of difficulties in the review thread. Instead, plea
 
 <%= reviewers.join(' & ').html_safe %>, please carry out your review in this issue by updating the checklist below. If you cannot edit the checklist please:
 1. Make sure you're logged in to your GitHub account
-2. Be sure to accept the invite at this URL: https://github.com/openjournals/joss-reviews/invitations
+2. Be sure to accept the invite at this URL: https://github.com/JuliaCon/proceedings-reviews/invitations
 
-The reviewer guidelines are available here: https://joss.theoj.org/about#reviewer_guidelines. Any questions/concerns please let <%= editor %> know.
+The reviewer guidelines are available here: https://proceedings.juliacon.org/guide/reviewers. Any questions/concerns please let <%= editor %> know.
 
 ✨ **Please try and complete your review in the next two weeks** ✨ 
 
