--- a/app/views/content/github/_review_checklist.erb
+++ b/app/views/content/github/_review_checklist.erb
@@ -28,8 +28,16 @@
 - [ ] **Automated tests:** Are there automated tests or manual steps described so that the function of the software can be verified?
 - [ ] **Community guidelines:** Are there clear guidelines for third parties wishing to 1) Contribute to the software 2) Report issues or problems with the software 3) Seek support
 
-### Software paper
+### Paper format
 
 - [ ] **Authors:** Does the `paper.tex` file include a list of authors with their affiliations?
 - [ ] **A statement of need:** Do the authors clearly state what problems the software is designed to solve and who the target audience is?
 - [ ] **References:** Do all archival references that should have a DOI list one (e.g., papers, datasets, software)?
+- [ ] **Page limit:** Is the page limit for the submitted document (extended abstract / full paper) respected?
+
+### Content
+
+- [ ] **Context:** is the scientific context motivating the work correctly presented?
+- [ ] **Methodology:** is the approach taken in the work justified, presented with enough details and reference to reproduce it?
+- [ ] **Results:** are the results presented and compared to approaches with similar goals?
+ 
