--- a/app/views/shared/meta_view_body.erb
+++ b/app/views/shared/meta_view_body.erb
@@ -11,7 +11,7 @@
 Thanks for submitting your paper to <%= abbreviation %> <%= paper.submitting_author.github_username %>. The <%= abbreviation %> editor <%= editor %>, will work with you on this issue to find a reviewer for your submission before creating the main review issue.
 <% else %>
 <%- abbreviation, reviewers = Rails.application.settings.values_at("abbreviation", "reviewers") %>
-Thanks for submitting your paper to <%= abbreviation %> <%= paper.submitting_author.github_username %>. **Currently, there isn't an <%= abbreviation %> editor assigned** to your paper.
+Thanks for submitting your paper to <%= abbreviation %> <%= paper.submitting_author.github_username %>. **Currently, there isn't a <%= abbreviation %> editor assigned** to your paper.
 <% end %>
 
 <%= paper.submitting_author.github_username %> if you have any suggestions for potential reviewers then please mention them here in this thread. In addition, [this list of people](<%= reviewers %>) have already agreed to review for <%= abbreviation %> and may be suitable for this submission.
